Change the structure to TypeScript

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -13,3 +13,12 @@
     background-color: rgb(19, 19, 163);
   }
 }
+
+.price_block_price {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.error {
+  color:"red"
+}
