--- a/src/components/card/FavouriteCard.scss
+++ b/src/components/card/FavouriteCard.scss
@@ -7,6 +7,10 @@
   transition: transform 0.4s ease, box-shadow 0.3s ease;
   border-radius: 12px;
 
+  & img {
+    width: 250px ;
+    height: 280px;
+  }
   & div {
     margin-top: 10px;
   }
