--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -8,7 +8,7 @@
   background-color: blue;
   height: 70px;
   color: white;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 30px;
 
   & input {
@@ -17,32 +17,79 @@
     font-size: 24px;
   }
 
-  .menuIconWrapper {
-    position: relative;
-    width: 60px;
-  }
+  &-logo {
+    font-size: 55px;
+    font-family: "Playwrite NG Modern", cursive;
+    color: white;
+    text-decoration: none;
 
-  .circle {
-    height: 13px;
-    width: 13px;
-    background-color: rgb(42, 238, 42);
-    border-radius: 50%;
-    position: absolute;
-    top:0;
-    right: 0
+    &:hover {
+      color: rgb(155, 145, 145);
+    }
   }
+}
+
+.menuIconWrapper {
+  position: relative;
+  width: 60px;
+}
+
+.menu-icon {
+  font-size: 45px;
+  color: white;
+}
+
+.circle {
+  height: 13px;
+  width: 13px;
+  background-color: rgb(42, 238, 42);
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .header-nav {
   @include items-centre();
   justify-content: center;
   font-size: 28px;
-  & a {
+
+  .icon-wrapper {
+    position: relative;
+  }
+
+  .icon-link {
     color: white;
     margin-right: 20px;
 
     &:hover {
       color: rgb(155, 145, 145);
     }
+  }
+
+  .cart-icon {
+    font-size: 50px;
+  }
+
+  .heart-icon {
+    font-size: 45px;
+  }
+
+  .cart-quantity {
+    font-size: 22px;
+    position: absolute;
+    top: 0;
+    right: -5px;
+  }
+
+  .favourite-wrapper {
+    margin-left: 40px;
+  }
+
+  .favourite-quantity {
+    font-size: 22px;
+    position: absolute;
+    top: 0;
+    left: 52px;
   }
 }
